--- a/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-simple-components/swop-simple-forms.scss
+++ b/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-simple-components/swop-simple-forms.scss
@@ -11,11 +11,39 @@
     display: flex;
     flex-direction: row;
     gap: $spacer-3;
-    margin-top: $spacer-4;
+    margin-top: $spacer-4 !important;
+    margin-bottom: 0 !important;
 
     @include media-breakpoint-up(md) {
       gap: $spacer-4;
-      margin-top: $spacer-5;
+      margin-top: $spacer-5 !important;
+    }
+
+    *[class*="col"] {
+      display: flex;
+      flex-direction: row;
+      gap: $spacer-3;
+
+      @include media-breakpoint-up(md) {
+        gap: $spacer-4;
+      }
+    }
+
+    .extra_buttons {
+      display: flex;
+      flex-direction: row;
+      gap: $spacer-3;
+
+      @include media-breakpoint-up(md) {
+        gap: $spacer-4;
+      }
     }
   }
+}
+
+form.main {
+  height: auto !important;
+  margin: 0 !important;
+  overflow-x: auto !important;
+  padding: 0 !important;
 }
